--- a/Internet/lwip-2_1_2/CHANGELOG
+++ b/Internet/lwip-2_1_2/CHANGELOG
@@ -841,7 +841,7 @@ HISTORY
   * sockets.c: fixed bug #45827: recvfrom: TCP window is updated with MSG_PEEK
 
   2015-08-20: Manoj Kumar
-  * snmp_msg.h, msg_in.c: fixed bug #43790: Sending octet string of Length >255
+  * snmp_msg.h, msg_in.c: fixed bug #43790: Sending octet string of length >255
     from SNMP agent
 
   2015-08-19: Jens Nielsen
